@@ -2,6 +2,9 @@
 Change log for mod_reader
 ========================================
 
+2024-03-07 (44)
+ - convert legacy cron job to a scheduled_task (Moodle >= 2.7)
+
 2024-03-07 (43)
  - protect legacy event handlers from the code police in Moodle >= 4.2
 
